--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -25,7 +25,7 @@ a {
 
 .display-board {
   width: 100%;
-  background-color: rgb(0,100,0);
+  background-color: rgb(555, 200, 789);
   padding: 5%;
 }
 
