--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -18,7 +18,7 @@ a {
 .header {
   width: 100%;
   padding: 2%;
-  background-color: purple;
+  background-color: darkgreen;
   color: white;
   text-align: center;
 }
