--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -24,6 +24,10 @@ a {
   text-align: center;
 }
 
+.App {
+  background-color: darkgreen;
+}
+
 .display-board {
   width: 100%;
   background-color: rgb(555, 200, 789);
