add left and right padding to image and remove top margin

--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -40,6 +40,11 @@ a {
   text-align: center;
 }
 
+.decoration-image {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .mrgnbtm {
   margin-top: 20px;
 }
